[gd_scene load_steps=2 format=3 uid="uid://b1v8d6w0nfjhh"]

[ext_resource type="Script" path="res://UI_Entries/fileselect/fileselect.gd" id="1_djmo5"]

[node name="Control" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djmo5")

[node name="epiclabel" type="Label" parent="."]
layout_mode = 2

[node name="filename" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="pickfile" type="Button" parent="."]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Select File..."

[node name="diag" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="tree_entered" from="epiclabel" to="." method="_on_epiclabel_tree_entered"]
[connection signal="pressed" from="pickfile" to="." method="_on_pickfile_pressed"]
[connection signal="file_selected" from="diag" to="." method="_on_diag_file_selected"]
